--- a/config/apache.conf
+++ b/config/apache.conf
@@ -31,6 +31,7 @@ ErrorLog ${APACHE_LOG_DIR}/error.log
 DirectoryIndex index.html
 DocumentRoot "${GITPOD_REPO_ROOT}/www"
 <Directory "${GITPOD_REPO_ROOT}/www">
+    Options Indexes  ## Allows directory browsing.
     Require all granted
 </Directory>
 
